--- a/Samples/Dijkring48.html
+++ b/Samples/Dijkring48.html
@@ -459,7 +459,7 @@
 
   <!-- content of page -->
   <div id="bodywrapper">
-    <div id="sidepanel" class="panel">Graph
+    <div id="sidepanel" class="panel">
       <br />
       <div class="loader padding-leader-3 padding-trailer-3" id="loader">
         <div class="loader-bars"></div>
@@ -471,7 +471,7 @@
     <div id="timeSliderDiv" class="panel">
       <form class="calcite-slider" id="example1">
         <label>
-          Time
+          Tijd
           <input type="range" min="1" max="81" value="81" step="1"
             aria-valuenow="10" id="timeSlider" style="width: 300px;">
         </label>
